@@ -1,6 +1,10 @@
 # ChangeLog for media-video/tvmovie2vdr
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tvmovie2vdr/ChangeLog,v 1.3 2004/07/27 18:29:39 austriancoder Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/tvmovie2vdr/ChangeLog,v 1.4 2004/08/01 16:26:04 austriancoder Exp $
+
+*tvmovie2vdr-0.1.4 (1 Aug 2004)
+  1 Aug 2004; Christian Gmeiner <christian at visual-page dot de>
+  version bump
 
 *tvmovie2vdr-0.1.2-r1 (12 July 2004)
   12 July 2004; Christian Gmeiner <christian at visual-page dot de>
